[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/robot/character_robot_attack2.png" type="Texture" id=1]
[ext_resource path="res://assets/robot/character_robot_walk6.png" type="Texture" id=2]
[ext_resource path="res://assets/robot/character_robot_walk1.png" type="Texture" id=3]
[ext_resource path="res://assets/robot/character_robot_walk3.png" type="Texture" id=4]
[ext_resource path="res://assets/robot/character_robot_walk5.png" type="Texture" id=5]
[ext_resource path="res://assets/robot/character_robot_attack1.png" type="Texture" id=6]
[ext_resource path="res://assets/robot/character_robot_jump.png" type="Texture" id=7]
[ext_resource path="res://assets/robot/character_robot_attack0.png" type="Texture" id=8]
[ext_resource path="res://assets/robot/character_robot_walk0.png" type="Texture" id=9]
[ext_resource path="res://assets/robot/character_robot_walk2.png" type="Texture" id=10]
[ext_resource path="res://assets/robot/character_robot_walk4.png" type="Texture" id=11]
[ext_resource path="res://assets/robot/character_robot_duck.png" type="Texture" id=12]
[ext_resource path="res://assets/robot/character_robot_walk7.png" type="Texture" id=13]
[ext_resource path="res://Player.gd" type="Script" id=14]
[ext_resource path="res://assets/robot/character_robot_idle.png" type="Texture" id=15]
[ext_resource path="res://assets/robot/character_robot_wide.png" type="Texture" id=16]
[ext_resource path="res://PlayerCam.gd" type="Script" id=17]
[ext_resource path="res://assets/robot/character_robot_climb0.png" type="Texture" id=18]
[ext_resource path="res://assets/robot/character_robot_climb1.png" type="Texture" id=19]
[ext_resource path="res://inventory/InventorySystem.tscn" type="PackedScene" id=20]
[ext_resource path="res://SpokenText.tscn" type="PackedScene" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "climb",
"speed": 4.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 10.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.278431, 0.843137, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.886275, 0.129412, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.054902, 0.00392157, 0.00392157, 1 )

[node name="RobotPlayer" type="KinematicBody2D" groups=["player"]]
collision_mask = 3
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 2 )

[node name="PlayerCam" type="Camera2D" parent="."]
position = Vector2( 0, -37 )
current = true
zoom = Vector2( 0.65, 0.65 )
script = ExtResource( 17 )

[node name="Timer" type="Timer" parent="PlayerCam"]

[node name="Tween" type="Tween" parent="PlayerCam"]

[node name="InfoBox" type="Label" parent="PlayerCam"]
visible = false
margin_left = -86.0
margin_top = -73.0
margin_right = 85.0
margin_bottom = -44.0
custom_styles/normal = SubResource( 5 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -39.0
margin_top = -73.0
margin_right = 45.0
margin_bottom = -59.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InventorySystem" parent="." instance=ExtResource( 20 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_top = -220.0
margin_bottom = -220.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="Speaker" type="Label" parent="."]
visible = false
margin_left = -221.0
margin_top = 72.0
margin_right = -127.0
margin_bottom = 90.0
custom_styles/normal = SubResource( 6 )
text = "Roksana"
align = 1
valign = 1

[node name="MainSpokenText" parent="." instance=ExtResource( 21 )]
visible = false
margin_top = 96.0
margin_bottom = 152.0

[connection signal="player_hit" from="." to="." method="_on_RobotPlayer_player_hit"]
[connection signal="timeout" from="PlayerCam/Timer" to="PlayerCam" method="_on_Timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]

[editable path="InventorySystem"]
